# C-Homework-6.7

./: .gitignore  CMakeLists.txt  IElectronics.h  README.md  appliance.cpp  appliance.h  main.cpp  portable.cpp  portable.h  portable_vacuum_cleaner.cpp  portable_vacuum_cleaner.h
